Import of DNORTH/VMS-Mail-0_05 from CPAN.
gitpan-cpan-distribution: VMS-Mail
gitpan-cpan-version:      0_05
gitpan-cpan-path:         DNORTH/VMS-Mail-0_05.zip
gitpan-cpan-author:       DNORTH
gitpan-cpan-maturity:     released

--- a/changes
+++ b/changes
@@ -10,3 +10,5 @@ Revision history for Perl extension VMS::Mail.
 	- Renamed to VMS::Mail from VMS::VMSmail
 0.04  Thu Aug 17 08:26:21 2000
 	- CPAN release, minor bugfixes, changes to work with Perl 5.6
+0.05  Thu Aug 17 13.25.29 2000
+	- CPAN re-release - remove vms attributes from the zipfile
